new update on html and css 2

--- a/main.html
+++ b/main.html
@@ -22,7 +22,23 @@
                 <h2>crud</h2>
                 <p>product management system</p>  
             </div>
-            <div class="inputs"></div>
+            <div class="inputs">
+                <input type="text" placeholder="title" id="title">
+
+
+                <div class="price">
+                    <input type="number"  id="price" placeholder="price">
+                    <input type="number"  id="taxes" placeholder="taxes">
+                    <input type="number"  id="ads" placeholder="ads">
+                    <input type="number"  id="discount" placeholder="discount">
+                    <small id="total">325434</small>
+                </div>
+                <input type="number" id="count" placeholder="count">
+                <input type="text" id="category" placeholder="category">
+                <button id="submit">Create</button>
+            </div>
+
+
             <div class="outputs"></div>
 
 
